--- a/mainApp/templates/weighingstateclose.html
+++ b/mainApp/templates/weighingstateclose.html
@@ -60,7 +60,7 @@
                                             <td>
                                                 {% if row.pendingstatus %}
                                                 <a class="btn btn-secondary" href="{% url 'editweighingstate' row.id %}"><i
-                                                        class="fas fa-edit"></i></a>
+                                                        class="fas fa-pen"></i></a>
                                                 <a class="btn btn-danger" href="{% url 'deleteweighingstate' row.id %}"
                                                     onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
                                                         class="fas fa-trash"></i></a>
