--- a/mainApp/templates/report_body.html
+++ b/mainApp/templates/report_body.html
@@ -56,11 +56,11 @@
                                             <td>{{row.dnno}}</td>
                                             <td>{{row.dnrev}}</td>
                                             <td>{{row.createdon|date:"Y/n/j h:m:i"}}</td>
-                                            <td><a data-toggle="tooltip" title="Export to PDF" target="_blank" class="btn btn-primary"
+                                            <td><a data-toggle="tooltip" title="Export to PDF" target="_blank" class="btn btn-sm btn-primary"
                                                     href="{% url 'reportbatchpdf' %}?id={{row.id}}"><i class="fas fa-file"></i></a>
                                                 <!-- <a data-toggle="tooltip" title="Edit" class="btn btn-secondary"
                                                     href="{% url 'editreportbody' row.id %}"><i class="fas fa-edit"></i></a> -->
-                                                <a data-toggle="tooltip" title="Delete" class="btn btn-danger"
+                                                <a data-toggle="tooltip" title="Delete" class="btn btn-sm btn-danger"
                                                     href="{% url 'deletereportbody' row.id %}"
                                                     onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
                                                         class="fas fa-trash"></i></a>
