--- a/mainApp/templates/reprint.html
+++ b/mainApp/templates/reprint.html
@@ -157,5 +157,11 @@
             },
         })
     })
+
+    $("form").bind("keypress", function (e) {
+        if (e.keyCode == 13) {
+            e.preventDefault()
+        }
+    });
 </script>
 {% endblock %}
