--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -59,7 +59,7 @@
                                 Reject
                                 {% endif %}
                             </td>
-                            <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
+                            <td>{{row.input_date|date:"Y/n/j G:i:s"}}</td>
                             <td>{{row.operator}}</td>
                             <td>{{row.petugasgudang}}</td>
                         </tr>
