--- a/mainApp/templates/report_batch_pdf_template3.html
+++ b/mainApp/templates/report_batch_pdf_template3.html
@@ -12,12 +12,6 @@
     <link rel="stylesheet" href="{% static 'adminlte/plugins/fontawesome-free/css/all.min.css' %}">
 
     <link rel="stylesheet" href="{% static 'adminlte/dist/css/adminlte.min.css' %}">
-    <!-- <script
-        nonce="7941c383-69e0-408e-b64f-8349f35440b6">(function (w, d) { !function (a, e, t, r) { a.zarazData = a.zarazData || {}, a.zarazData.executed = [], a.zaraz = { deferred: [] }, a.zaraz.q = [], a.zaraz._f = function (e) { return function () { var t = Array.prototype.slice.call(arguments); a.zaraz.q.push({ m: e, a: t }) } }; for (const e of ["track", "set", "ecommerce", "debug"]) a.zaraz[e] = a.zaraz._f(e); a.addEventListener("DOMContentLoaded", (() => { var t = e.getElementsByTagName(r)[0], z = e.createElement(r), n = e.getElementsByTagName("title")[0]; for (n && (a.zarazData.t = e.getElementsByTagName("title")[0].text), a.zarazData.x = Math.random(), a.zarazData.w = a.screen.width, a.zarazData.h = a.screen.height, a.zarazData.j = a.innerHeight, a.zarazData.e = a.innerWidth, a.zarazData.l = a.location.href, a.zarazData.r = e.referrer, a.zarazData.k = a.screen.colorDepth, a.zarazData.n = e.characterSet, a.zarazData.o = (new Date).getTimezoneOffset(), a.zarazData.q = []; a.zaraz.q.length;) { const e = a.zaraz.q.shift(); a.zarazData.q.push(e) } z.defer = !0; for (const e of [localStorage, sessionStorage]) Object.keys(e).filter((a => a.startsWith("_zaraz_"))).forEach((t => { try { a.zarazData["z_" + t.slice(7)] = JSON.parse(e.getItem(t)) } catch { a.zarazData["z_" + t.slice(7)] = e.getItem(t) } })); z.referrerPolicy = "origin", z.src = "/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(a.zarazData))), t.parentNode.insertBefore(z, t) })) }(w, d, 0, "script"); })(window, document);</script> -->
-
-    <!-- POLYFIL - PAGINATION -->
-    <script type="text/javascript" src="{% static 'others/paged.polyfill.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'others/interface.css' %}">
     <style>
         /* Use A4 paper in landscape orientation */
         @page {
@@ -25,14 +19,9 @@
         }
     
         @page {
-            margin: 10mm 10mm;
+            margin: 100mm 100mm;
         }
-    
-        /* @page {
-            @bottom-left {
-                    content: "page " counter(page) "/" counter(pages);
-            }
-            } */
+
         @media print {
             .pagebreak {
                 page-break-before: always;
@@ -40,16 +29,11 @@
     
             /* page-break-after works, as well */
         }
-    
-        .page-number:before {
-            content: "Pages "counter(page) " of "counter(pages);
-            font-style: italic;
-        }
     </style>
 </head>
 
 <body>
-    <div class="wrapper">
+    <div class="wrapper" style="margin:5mm 15mm">
 
         <section class="invoice">
 
@@ -62,7 +46,7 @@
                             <td rowspan="2" width="300px" class="align-middle"><img height="100px" src="{% static 'others/logo.png' %}">
                             </td>
                             <td width="300px" class="align-middle"><b><i>{{config.pdf_form}}</i></b></td>
-                            <td width="300px"><div class="page-number"></div></td>
+                            <td width="300px"><div id="page{{forloop.counter0}}"></td>
                         </tr>
                         <tr class="text-center align-middle h5">
                             <td><b><i>{{header.reporttitle.title}}
@@ -118,8 +102,6 @@
                             </td>
                         </tr>
                     </table>
-                    {% endif%}
-                    {% endfor %}
                     <table class="table table-bordered">
                         <tr class="text-center text-bold">
                             <td width="200px">{{config.pdf_dilakukan_oleh}}</td>
@@ -133,7 +115,7 @@
                             <td>{{config.pdf_user_3}}</td>
                             <td>{{config.pdf_user_4}}</td>
                         </tr>
-                        <tr height="100px">
+                        <tr height="70px">
                             <td>{{config.pdf_paraf}}:</td>
                             <td>{{config.pdf_paraf}}:</td>
                             <td>{{config.pdf_paraf}}:</td>
@@ -152,6 +134,8 @@
                             <td>{{config.pdf_tanggal_paraf}}: {{header.signingdate|date:"d-m-Y"}}</td>
                         </tr>
                     </table>
+                    {% endif%}
+                    {% endfor %}
                 </div>
             </div>
         </section>
@@ -172,6 +156,7 @@
             var numofsection = Math.ceil({{ data| length }} / 30)
             for (var i = 0; i < numofsection; i++) {
                 var offset = i * 30
+                $("#page"+offset).text("Page "+(Math.floor(offset/30)+1)+" of "+numofsection)
                 $.ajax({
                     type: "POST",
                     dataType: "json",
@@ -182,7 +167,7 @@
                         data.forEach(row => {
                             var el = `
                             <tr>
-                                <td>`+ row.createdon + `</td>
+                                <td>`+ row.formatted_date + `</td>
                                 <td class="text-right">`+ row.boxno + `</td>
                                 <td class="text-right">`+ (row.weight == null ? "-" : row.weight) + `</td>
                             </tr>
@@ -205,7 +190,7 @@
                         data.forEach(row => {
                             el += `
                             <tr>
-                                <td>`+ row.createdon + `</td>
+                                <td>`+ row.formatted_date + `</td>
                                 <td class="text-right">`+ row.boxno + `</td>
                                 <td class="text-right">`+ (row.weight == null? "-":row.weight) + `</td>
                             </tr>
