--- a/mainApp/templates/report_batch_pdf_template3.html
+++ b/mainApp/templates/report_batch_pdf_template3.html
@@ -54,7 +54,7 @@
                             <td><i>{{header.department.name}}</i></td>
                         </tr>
                         <tr class="align-middle h5">
-                            <td class="text-left"><i>{{config.pdf_dn}}: {{header.dnno}}</i><br>{{config.pdf_eff_date}}: {{header.effectivedate|date:"d b Y"|upper}}</td>
+                            <td class="text-left"><i>{{config.pdf_dn}}: {{header.dnno}}</i><br>{{config.pdf_eff_date}}: {{header.effectivedate|date:"d-m-Y"|upper}}</td>
                             <td class="text-center"><i>{{config.pdf_will_be_reviewed}}:
                                     <br>{{header.reviewdate|date:"F Y"}}</i></td>
                             <td class="text-left"><i>{{config.pdf_rev_of_dn}}: {{header.dnrev|stringformat:"02d"}}<br>{{config.pdf_dn_date}}: {{header.createdon|date:"d-m-Y"}}</i></td>
