--- a/mainApp/templates/config.html
+++ b/mainApp/templates/config.html
@@ -11,6 +11,25 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
+                <div class="row">
+                    <div class="col-lg-2">
+                        <label for="">Choose Template</label>
+                    </div>  
+                    <div class="col-lg-2">
+                        <select name="" id="cmb_pdf_template_name" class="form-control">
+                            {%for row in templates%}
+                            <option {% if row.pdf_template_name == data.0.pdf_template_name %} selected {% endif %} >{{ row.pdf_template_name }}</option>
+                            {%endfor%}
+                        </select>
+                    </div>
+                    <div class="col-lg-1">
+                        <button class="btn btn-primary" onclick="changeTemplate()">Change</button>
+                    </div>
+                    <div class="col-lg-1">
+                        <button class="btn btn-danger" onclick="deleteTemplate()">Delete</button>
+                    </div>
+                </div>
+                <hr>
                 <form action="{% url 'config' %}" method="POST" autocomplete="off" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-lg-6">
@@ -66,5 +85,42 @@
     {% if message %}
     alert("{{message}}")
     {% endif %}
+
+    function changeTemplate(){
+        var url = "{% url 'changetemplate'%}";
+        var pdf_template_name = $("#cmb_pdf_template_name").val();
+        var data = {
+            pdf_template_name: pdf_template_name
+        }
+        $.ajax({
+            type: "GET",
+            data: data,
+            url: url,
+            success: function (data) {
+                alert(data)
+                location.reload();
+            }
+        })
+    }
+
+    function deleteTemplate(){
+        var url = "{% url 'deletetemplate'%}";
+        var pdf_template_name = $("#cmb_pdf_template_name").val();
+        var data = {
+            pdf_template_name: pdf_template_name
+        }
+        var confirmed = confirm("Are you sure you want to delete this template?");
+        if (confirmed) {
+            $.ajax({
+                type: "GET",
+                data: data,
+                url: url,
+                success: function (data) {
+                    alert(data)
+                    location.reload();
+                }
+            })
+        }
+    }
 </script>
 {% endblock %}
